[metadata]
name = nx_config
version = 0.2.0-beta.4
description = A convenient way to configure python applications that makes it easy and natural to follow best practices and solves a variety of common issues encountered when using e.g. the 'configparser' library.
long_description = file: README.rst
url = https://github.com/NextKraftwerke/PyConfig
project_urls =
    Bug Tracker = https://github.com/NextKraftwerke/PyConfig/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
keywords=
    configuration
    settings
    yaml
    toml
    ini
    env
author = Tomás Silveira Salles
author_email = 30598365+tomasssalles@users.noreply.github.com
    
[options]
packages = 
    nx_config
    nx_config.test_utils
    nx_config._core
python_requires = >=3.6, <3.10
install_requires = 
    python-dateutil >= 2.8.2, < 3
    pyyaml >= 6.0, < 7

[options.extras_require]
tests =
tox =
    tox >=3.24.4, <4
coverage =
    coverage >=6.0.2, <7
docs =
    sphinx >=4.2.0, <5
    python-docs-theme >=2021.11.1, <2022
